--- a/src/components/style/home.css
+++ b/src/components/style/home.css
@@ -1,4 +1,9 @@
 .toptext{
     text-align: center;
     font-size: 2em;
+    color: #255f03;
+}
+.paragraph{
+    text-align: center;
+    color: #255f03;
 }
