--- a/src/components/style/home.css
+++ b/src/components/style/home.css
@@ -10,6 +10,24 @@
 
 .image1{
     width: 300px;
-    height: 400px;
-    padding: 20px;
+    height: 450px;
+}
+
+.my-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 3px; /*space between rows*/
+}
+
+.image-block{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+@media (max-width: 600px){
+    .row{
+        flex-direction: column;
+        align-items: center;
+    }
 }
