--- a/src/components/style/navbar.css
+++ b/src/components/style/navbar.css
@@ -1,18 +1,30 @@
-.cart{
+ .cart{
     width: 40px;
     height: 40px;
     position: relative;
-    left: 1680px;
+    left: 1120px;
     top: 10px;
 }
-
+/*
 .signup{
     position: relative;
-    left: 1630px;
+    left: 1030px;
 }
 
 
 .login{
     position: relative;
-    left: 1650px;
+    left: 1050px;
+} */
+
+.left{
+    padding: 20px;
+}
+
+.right{
+    width: 40px;
+    height: 40px;
+    position: relative;
+    left: 1100px;
+    padding-left: 25px;
 }
