--- a/src/components/style/store.css
+++ b/src/components/style/store.css
@@ -1,4 +1,4 @@
-/* .toptext{
+.toptext{
     text-align: center;
     font-size: 2em;
     color: #255f03;
@@ -20,7 +20,7 @@
     width: 300px;
     height: 450px;
     position: relative;
-    left: 1010px;
+    left: 900px;
     bottom: 1000px;
 }
 
@@ -28,8 +28,8 @@
     width: 300px;
     height: 450px;
     position: relative;
-    left: 50px;
-    bottom: 1000px;
+    left: 1500px;
+    bottom: 1770px;
 }
 
 .p1{
@@ -39,14 +39,14 @@
 
 .p2{
     position: relative;
-    left: 1010px;
+    left: 900px;
     bottom: 1000px;
 }
 
 .p3{
     position: relative;
-    left: 50px;
-    bottom: 1000px;
+    left: 1500px;
+    bottom: 1770px;
 }
 
 @media (max-width: 600px){
@@ -54,4 +54,4 @@
         flex-direction: column;
         align-items: center;
     }
-} */
+}
