--- a/src/components/style/home.css
+++ b/src/components/style/home.css
@@ -5,10 +5,10 @@
 }
 
 .card{
-    width: 200px;
-    height: 250px;
+    width: 1000px;
+    height: 1000px;
     border-radius: 10px;
-    padding: 20px;
+    padding-left: 450px;
 }
 
 .description{
