--- a/src/components/style/signup.css
+++ b/src/components/style/signup.css
@@ -23,6 +23,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 50px;
 }
 
 
@@ -31,4 +32,6 @@
     width: 300px;
     border: 5px solid #255f03;
     border-radius: 10px;
+    background-color: #255f03;
+    font-size: 20px;
 }
