--- a/src/components/style/conditioner.css
+++ b/src/components/style/conditioner.css
@@ -1,8 +1,10 @@
 .img1{
     position: relative;
-    top: 150px;
+    top: 80px;
 }
 
-.text1{
+.textt1{
     color: #255f03;
+    font-size: 2rem;
+    text-align: center;
 }
