--- a/src/components/style/conditioner.css
+++ b/src/components/style/conditioner.css
@@ -8,3 +8,14 @@
     font-size: 2rem;
     text-align: center;
 }
+
+.cart{
+    width: 170px;
+    height: 70px;
+    color: #255f03;
+}
+
+.cartimg{
+    width: 40px;
+    height: 40px;
+}
