--- a/src/components/style/store.css
+++ b/src/components/style/store.css
@@ -8,7 +8,7 @@
     color: #255f03;
 }
 
-.image1{
+/* .image1{
     width: 300px;
     height: 450px;
     position: relative;
@@ -57,4 +57,4 @@
         flex-direction: column;
         align-items: center;
     }
-}
+} */
