--- a/src/components/style/conditioner.css
+++ b/src/components/style/conditioner.css
@@ -15,7 +15,7 @@
     font-size: 30px;
     background-color: #255f03;
     position: relative;
-    left: 500px;
+    left: 330px;
     border-radius: 7px;
 }
 
@@ -25,29 +25,41 @@
 
 .decrease{
     width: 30px;
-    height: 30px;
+    height: 34px;
     background-color: #255f03;
     position: relative;
     left: 100px;
-    bottom: 110px;
+    bottom: 105px;
+    border-radius: 1px;
+    border-bottom: 2px solid black;
+    border-top: 2px solid black;
+    border-left: 2px solid black;
+    border-right: 2px solid black;
 }
 
 .increase{
     width: 30px;
-    height: 30px;
+    height: 34px;
     background-color: #255f03;
     position: relative;
-    left: 150px;
-    bottom: 110px;
+    left: 84px;
+    bottom: 105px;
+    border-radius: 1px;
+    border-bottom: 2px solid black;
+    border-top: 2px solid black;
+    border-right: 2px solid black;
 }
 
 .number{
-    width: 40px;
-    height: 50px;
+    width: 50px;
+    height: 57px;
     background-color: #255f03;
     position: relative;
-    left: 440px;
-    bottom: 160px;
+    left: 90px;
+    bottom: 122px;
+    border-radius: 1px;
+    border-bottom: 3px solid black;
+    border-top: 2px solid black;
     border-left: 2px solid black;
     border-right: 2px solid black;
     font-size: 2em;
