--- a/src/components/style/conditioner.css
+++ b/src/components/style/conditioner.css
@@ -1,8 +1,6 @@
-.img1{
-    position: relative;
-    top: 80px;
+.img{
+    float: left;
 }
-
 .textt1{
     color: #255f03;
     font-size: 2rem;
@@ -67,7 +65,7 @@
 
 .paragraph{
     font-size: 10px;
-    position: relative;
+    /* position: relative;
     left: 600px;
-    top: 500px;
+    top: 500px; */
 }
