--- a/src/components/style/conditioner.css
+++ b/src/components/style/conditioner.css
@@ -17,7 +17,8 @@ p{
     font-size: 30px;
     background-color: #255f03;
     position: relative;
-    left: 330px;
+    left: 30px;
+    top: 90px;
     border-radius: 7px;
 }
 
@@ -30,45 +31,36 @@ p{
     height: 34px;
     background-color: #255f03;
     position: relative;
-    left: 100px;
-    bottom: 90px;
+    top: 30px;
+    right: 200px;
     border-radius: 1px;
-    border-bottom: 2px solid black;
+    /* border-bottom: 2px solid black;
     border-top: 2px solid black;
     border-left: 2px solid black;
-    border-right: 2px solid black;
+    border-right: 2px solid black; */
 }
 .increase{
     width: 30px;
     height: 34px;
     background-color: #255f03;
-    position: relative;
-    left: 84px;
-    bottom: 105px;
+     position: relative;
+    top: 30px;
+    right: 216px;
     border-radius: 1px;
-    border-bottom: 2px solid black;
+    /* border-bottom: 2px solid black;
     border-top: 2px solid black;
-    border-right: 2px solid black;
+    border-right: 2px solid black; */
 }
 
 .number{
     width: 50px;
-    height: 57px;
+    height: 50px;
     background-color: #255f03;
     position: relative;
-    left: 90px;
-    bottom: 122px;
+    top: 15px;
+    right: 210px;
     border-radius: 1px;
-    border-bottom: 3px solid black;
-    border-top: 2px solid black;
     border-left: 2px solid black;
     border-right: 2px solid black;
     font-size: 2em;
-}
-
-.paragraph{
-    font-size: 10px;
-    position: relative;
-    left: 600px;
-    top: 500px;
 }
