--- a/src/components/style/conditioner.css
+++ b/src/components/style/conditioner.css
@@ -39,17 +39,25 @@ p{
     border-left: 2px solid black;
     border-right: 2px solid black; */
 }
-.increase{
-    width: 30px;
-    height: 34px;
+
+
+.increase1{
+    width: 50px;
+    height: 55px;
     background-color: #255f03;
      position: relative;
     top: 30px;
     right: 216px;
     border-radius: 1px;
-    /* border-bottom: 2px solid black;
-    border-top: 2px solid black;
-    border-right: 2px solid black; */
+}
+.increase{
+    width: 30px;
+    height: 34px;
+    background-color: #255f03;
+     position: relative;
+    top: 2px;
+    right: 6px;
+    border-radius: 1px;
 }
 
 .number{
