--- a/frontend/src/components/style/conditioner.css
+++ b/frontend/src/components/style/conditioner.css
@@ -1,5 +1,6 @@
 .img{
     float: left;
+    height: 450px;
 }
 
 p{
@@ -19,7 +20,7 @@ p{
     border-radius: 7px;
     position: relative;
     left: 0px;
-    top: 20px;
+    top: 35px;
 }
 
 .cart1:hover{
@@ -43,7 +44,7 @@ p{
     height: 34px;
     background-color: #255f03;
     position: relative;
-    bottom: 30px;
+    bottom: 20px;
     right: 230px;
     border-radius: 1px;
 }
@@ -53,7 +54,7 @@ p{
     height: 34px;
     background-color: #255f03;
     position: relative;
-    bottom: 30px;
+    bottom: 20px;
     right: 230px;
     border-radius: 1px;
 }
@@ -63,7 +64,7 @@ p{
     height: 49px;
     background-color: #255f03;
     position: relative;
-    bottom: 44px;
+    bottom: 34px;
     right: 230px;
     border-radius: 1px;
     border-left: 2px solid black;
