--- a/frontend/src/components/style/conditioner.css
+++ b/frontend/src/components/style/conditioner.css
@@ -27,7 +27,7 @@ p{
     background-color: #469717;
 }
 
-.decrease:hover{
+/* .decrease:hover{
     background-color: #338105;
 }
 
@@ -71,4 +71,12 @@ p{
     border-right: 2px solid black;
     font-size: 2em;
     text-align: center;
+} */
+
+.controls{
+    width: 50px;
+    height: 40px;
+    position: relative;
+    bottom: 60px;
+    right: 220px;
 }
