cart page adjustment 3

--- a/frontend/src/components/style/cartpage.css
+++ b/frontend/src/components/style/cartpage.css
@@ -2,3 +2,13 @@
     text-align: center;
     color: #255f03;
 }
+
+.img{
+    float: left;
+}
+
+.cartproduct{
+    position: relative;
+    bottom: 450px;
+    left: 370px;
+}
