--- a/frontend/src/components/style/cartpage.css
+++ b/frontend/src/components/style/cartpage.css
@@ -17,8 +17,14 @@
     padding: 5px;
 }
 
-/* .cartproduct{
-    position: relative;
-    bottom: 430px;
-    left: 370px;
-} */
+.checkout{
+    width: 230px;
+    height: 70px;
+    font-size: 30px;
+    background-color: #255f03;
+    border-radius: 7px;
+}
+
+.checkout:hover{
+    background-color: #469717;
+}
