--- a/frontend/src/components/style/cartpage.css
+++ b/frontend/src/components/style/cartpage.css
@@ -78,3 +78,15 @@
     width: 30px;
     height: 30px;
 }
+/* 30px;
+    height:.bin img{
+.bin img{
+.bin img{
+    width:  30px;
+}
+    width: 30px;
+    height: 30px;
+}
+    width: 30px;
+    height: 30px;
+} */
